--- a/src/pages/sort-by/sort-by.html
+++ b/src/pages/sort-by/sort-by.html
@@ -22,24 +22,24 @@
 
 
 <ion-content no-padding>
-  <ion-list>
+  <ion-list radio-group [(ngModel)]="sort">
     <button ion-item (click)="openOption('product_name')">
       <ion-label>
         Product Name
       </ion-label>
       <div item-content class="item-content">
-        A-Z
+        {{ sort == 'product_desc' ? 'Z-A' : 'A-Z' }}
         <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
       </div>
     </button>
-    <ion-list class="sublist" *ngIf="options.product_name" radio-group padding-left>
-      <ion-item>
+    <ion-list class="sublist" [hidden]="!options.product_name" padding-left>
+      <ion-item mode="ios">
         <ion-label color="dark">A-Z</ion-label>
-        <ion-radio value="a-z" checked></ion-radio>
+        <ion-radio mode="ios" value="product_asc"></ion-radio>
       </ion-item>
-      <ion-item>
+      <ion-item mode="ios">
         <ion-label color="dark">Z-A</ion-label>
-        <ion-radio value="z-a"></ion-radio>
+        <ion-radio mode="ios" value="product_desc"></ion-radio>
       </ion-item>
     </ion-list>
 
@@ -48,18 +48,18 @@
         Earning Amount
       </ion-label>
       <div item-content class="item-content">
-        Lowest first
+        {{ sort == 'earning_desc' ? 'Lowest first' : 'Highest first' }}
         <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
       </div>
     </button>
-    <ion-list class="sublist" *ngIf="options.earning" radio-group padding-left>
-      <ion-item>
+    <ion-list class="sublist" [hidden]="!options.earning" padding-left>
+      <ion-item mode="ios">
         <ion-label color="dark">Highest first</ion-label>
-        <ion-radio value="high" checked></ion-radio>
+        <ion-radio mode="ios" value="earning_asc"></ion-radio>
       </ion-item>
-      <ion-item>
+      <ion-item mode="ios">
         <ion-label color="dark">Lowest first</ion-label>
-        <ion-radio value="low"></ion-radio>
+        <ion-radio mode="ios" value="earning_desc"></ion-radio>
       </ion-item>
     </ion-list>
 
@@ -68,18 +68,18 @@
         Date
       </ion-label>
       <div item-content class="item-content">
-        Ascending
+        {{ sort == 'date_desc' ? 'Descending' : 'Ascending' }}
         <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
       </div>
     </button>
-    <ion-list class="sublist" *ngIf="options.date" radio-group padding-left>
-      <ion-item>
+    <ion-list class="sublist" [hidden]="!options.date" padding-left>
+      <ion-item mode="ios">
         <ion-label color="dark">Ascending</ion-label>
-        <ion-radio value="asc" checked></ion-radio>
+        <ion-radio mode="ios" value="date_asc"></ion-radio>
       </ion-item>
-      <ion-item>
+      <ion-item mode="ios">
         <ion-label color="dark">Descending</ion-label>
-        <ion-radio value="desc"></ion-radio>
+        <ion-radio mode="ios" value="date_desc"></ion-radio>
       </ion-item>
     </ion-list>
 
