--- a/src/pages/report-result/report-result.html
+++ b/src/pages/report-result/report-result.html
@@ -19,7 +19,16 @@
 
   <h3 class="result-status" text-capitalize>{{status}}!</h3>
 
-  <p class="result-message">{{message}}</p>
+  <section *ngIf="status == 'error'">
+    <p class="result-message">{{message}}</p>
+  </section>
+
+  <section *ngIf="status != 'error'">
+    <p class="result-message">The buyer was put on your blacklist</p>
+    <p class="result-message">The buyer can't purchase any of your products</p>
+    <p class="result-message">We will now verify if the buyer should be blocked from purchasing other vendor's products</p>
+    <p class="result-message"><strong>Order ID: #######</strong></p>
+  </section>
 
 </ion-content>
 
