add search logic

--- a/src/pages/sort-by/sort-by.html
+++ b/src/pages/sort-by/sort-by.html
@@ -2,15 +2,15 @@
   <ion-navbar>
 
     <ion-buttons left>
-      <button ion-button clear color="clear" (click)="dismiss()" icon-left><ion-icon name="ios-arrow-back"></ion-icon>Cancel</button>
+      <button ion-button text-capitalize clear color="clear" (click)="dismiss()" icon-left><ion-icon name="ios-arrow-back"></ion-icon>Cancel</button>
     </ion-buttons>
 
     <ion-title text-center>
-      Sort By
+      <b>Sort By</b>
     </ion-title>
 
     <ion-buttons end>
-      <button clear color="clear" ion-button (click)="submit()">Apply</button>
+      <button clear color="clear" ion-button text-capitalize (click)="submit()">Apply</button>
     </ion-buttons>
   </ion-navbar>
 
