--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -4,7 +4,7 @@
       Transactions
     </ion-title>
     <ion-buttons *ngIf="currentPeriod" end>
-      <button ion-button float-end clear color="clear" (click)="showAll()">All</button>
+      <button ion-button float-end text-capitalize clear color="clear" (click)="showAll()">All</button>
     </ion-buttons>
   </ion-navbar>
 
