--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -1,7 +1,17 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Search & Filters</ion-title>
+
+    <ion-buttons left>
+      <button text-capitalize ion-button clear color="clear" (click)="dismiss()" icon-left><ion-icon name="ios-arrow-back"></ion-icon>Cancel</button>
+    </ion-buttons>
+
+    <ion-title text-center><b>Search & Filters</b></ion-title>
+
+    <ion-buttons end *ngIf="extended">
+      <button text-capitalize clear color="clear" ion-button (click)="clearSearchParams()">Clear all</button>
+    </ion-buttons>
+
   </ion-navbar>
 
 </ion-header>
@@ -17,58 +27,73 @@
     </ion-row>
   </ion-grid>
 
-  <form [formGroup]="searchForm">
-    <section padding *ngIf="!extended">
+  <section padding *ngIf="!extended">
+
+    <form [formGroup]="searchForm">
 
       <ion-list>
         <ion-item no-margin no-padding>
-          <ion-input formControlName="orderID" type="text" placeholder="OrderID"></ion-input>
+          <ion-input formControlName="product_id" type="text" placeholder="OrderID"></ion-input>
         </ion-item>
         <ion-label *ngIf="showedError" class="err-message" no-margin>
           {{ showedError }}
         </ion-label>
       </ion-list>
 
-    </section>
-    <section *ngIf="extended" no-padding>
-      <ion-list no-padding>
+    </form>
+
+  </section>
+
+  <section *ngIf="extended" no-padding>
+
+    <ion-list no-padding>
+
         <ion-item-divider style="min-height: 0"><ion-label no-margin></ion-label></ion-item-divider>
         <button no-padding ion-item icon-end (click)="setActive('product')">
           <ion-icon [color]="activeTab === 'product' ? 'primary' : 'dark'" name="{{activeTab === 'product' ? 'ios-arrow-up' :'ios-arrow-down'}}" item-end></ion-icon>
           <ion-label padding-left [color]="activeTab === 'product' ? 'primary' : 'dark'">Product Name</ion-label>
         </button>
-        <ion-list padding *ngIf="activeTab === 'product'">
-          <ion-item no-margin no-padding>
-            <ion-input formControlName="orderID" type="text" placeholder="Order ID"></ion-input>
-          </ion-item>
-          <ion-item no-margin no-padding>
-            <ion-input formControlName="orderID" type="text" placeholder="Product Name"></ion-input>
-          </ion-item>
-        </ion-list>
 
-        <button no-padding ion-item icon-end (click)="setActive('customer')">
-          <ion-icon [color]="activeTab === 'customer' ? 'primary' : 'dark'" name="{{activeTab === 'customer' ? 'ios-arrow-up' :'ios-arrow-down'}}" item-end></ion-icon>
-          <ion-label padding-left [color]="activeTab === 'customer' ? 'primary' : 'dark'">Customer Info</ion-label>
-        </button>
-        <ion-list padding *ngIf="activeTab === 'customer'">
-          <ion-grid no-padding>
-            <ion-row>
-              <ion-col col-6>
-                <ion-item no-margin no-padding>
-                  <ion-input formControlName="orderID" type="text" placeholder="Firstname"></ion-input>
-                </ion-item>
-              </ion-col>
-              <ion-col col-6>
-                <ion-item no-margin no-padding>
-                  <ion-input formControlName="orderID" type="text" placeholder="Lastname"></ion-input>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-          <ion-item no-margin no-padding>
-            <ion-input formControlName="orderID" type="email" placeholder="Email"></ion-input>
-          </ion-item>
-        </ion-list>
+        <form [formGroup]="searchFormExtended">
+
+          <ion-list padding *ngIf="activeTab === 'product'">
+            <ion-item no-margin no-padding>
+              <ion-input formControlName="product_id" type="text" placeholder="Order ID"></ion-input>
+            </ion-item>
+            <!--<ion-item no-margin no-padding>-->
+              <!--<ion-input formControlName="orderID" type="text" placeholder="Product Name"></ion-input>-->
+            <!--</ion-item>-->
+          </ion-list>
+
+          <button no-padding ion-item icon-end (click)="setActive('customer')">
+            <ion-icon [color]="activeTab === 'customer' ? 'primary' : 'dark'" name="{{activeTab === 'customer' ? 'ios-arrow-up' :'ios-arrow-down'}}" item-end></ion-icon>
+            <ion-label padding-left [color]="activeTab === 'customer' ? 'primary' : 'dark'">Customer Info</ion-label>
+          </button>
+          <ion-list *ngIf="activeTab === 'customer'">
+            <ion-grid padding>
+              <ion-row>
+                <ion-col col-6>
+                  <ion-item no-margin no-padding>
+                    <ion-input formControlName="first_name" type="text" placeholder="First name"></ion-input>
+                  </ion-item>
+                </ion-col>
+                <ion-col col-6>
+                  <ion-item no-margin no-padding>
+                    <ion-input formControlName="last_name" type="text" placeholder="Last name"></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col col-12>
+                  <ion-item no-margin no-padding>
+                    <ion-input formControlName="email" type="email" placeholder="Email"></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-list>
+
+        </form>
 
         <button no-padding ion-item icon-end (click)="setActive('transaction')">
           <ion-icon [color]="activeTab === 'transaction' ? 'primary' : 'dark'" name="{{activeTab === 'transaction' ? 'ios-arrow-up' :'ios-arrow-down'}}" item-end></ion-icon>
@@ -79,96 +104,90 @@
             <ion-row>
               <ion-col col-6>
                 <ion-item no-margin no-padding>
-                  <ion-input formControlName="orderID" type="text" placeholder="StartDay"></ion-input>
+                  <ion-datetime displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="searchObj.from"></ion-datetime>
+                  <!--<ion-input formControlName="from" type="text" placeholder="Start day"></ion-input>-->
                 </ion-item>
               </ion-col>
               <ion-col col-6>
                 <ion-item no-margin no-padding>
-                  <ion-input formControlName="orderID" type="text" placeholder="EndDay"></ion-input>
+                  <ion-datetime displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="searchObj.to"></ion-datetime>
+                  <!--<ion-input formControlName="to" type="text" placeholder="End day"></ion-input>-->
                 </ion-item>
               </ion-col>
             </ion-row>
           </ion-grid>
           <ion-list no-padding>
-            <button no-padding ion-item>
+            <button no-padding ion-item (click)="openPageParams('Affiliate')">
               <ion-label padding-left>
                 Affiliate
               </ion-label>
               <div item-content class="item-content">
-                With Affiliate
+                {{ getAffiliateValue() }}
                 <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
               </div>
             </button>
-            <button no-padding ion-item>
+            <button no-padding ion-item (click)="openPageParams('Transaction type')">
               <ion-label padding-left>
                 Transaction Type
               </ion-label>
               <div item-content class="item-content">
-                Payment, Test refunding
+                {{ getTypesValue(searchObj.transaction_type) }}
                 <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
               </div>
             </button>
           </ion-list>
-          <ion-grid no-padding>
+          <ion-grid>
             <ion-row>
               <ion-list-header no-margin>
                 Payment Method
               </ion-list-header>
             </ion-row>
-            <ion-row padding-left padding-right>
-              <ion-col col-6 class="horizontal-list">
-                <button ion-button block color="filter">Bank Transfer</button>
-                <button ion-button block color="filter">Bank Transfer</button>
-                <button ion-button block color="filter">Bank Transfer</button>
-              </ion-col>
-              <ion-col col-6 class="horizontal-list">
-                <button ion-button block color="filter">Bank Transfer</button>
-                <button ion-button block color="filter">Bank Transfer</button>
-                <button ion-button block color="filter">Bank Transfer</button>
+            <ion-row>
+              <ion-col *ngFor="let payment of globalTypesFromServer.pay_method | keys">
+                <button #butPayment ion-button block [class.selected]="setSelectedClass(payments, payment.key)" (click)="toggleVal('payments', payment.key, butPayment)">
+                  {{payment.value}}
+                </button>
               </ion-col>
             </ion-row>
           </ion-grid>
 
-          <ion-grid no-padding>
+          <ion-grid>
             <ion-row>
               <ion-list-header no-margin>
                 Currency
               </ion-list-header>
             </ion-row>
             <ion-row padding-left padding-right>
-              <ion-col col-4 class="horizontal-list">
-                <button ion-button block color="filter">EUR</button>
-              </ion-col>
-              <ion-col col-4 class="horizontal-list">
-                <button ion-button block color="filter">USD</button>
-              </ion-col>
-              <ion-col col-4 class="horizontal-list">
-                <button ion-button block color="filter">CHF</button>
+              <ion-col *ngFor="let currency of currenciesFromServer">
+                <button #butCurrency ion-button block [class.selected]="setSelectedClass(currencies, currency)" (click)="toggleVal('currencies', currency, butCurrency)">
+                  {{ currency }}
+                </button>
               </ion-col>
             </ion-row>
           </ion-grid>
 
           <ion-list>
             <ion-item-divider></ion-item-divider>
-            <button ion-item>
+            <button ion-item (click)="openPageParams('Billing type')">
               <ion-label>
                 Billing Type
               </ion-label>
               <div item-content class="item-content">
-                Invoice
+                {{ getTypesValue(searchObj.billing_type) }}
                 <ion-icon md="ios-arrow-forward" color="light"></ion-icon>
               </div>
             </button>
           </ion-list>
         </ion-list>
-      </ion-list>
-    </section>
-  </form>
+
+    </ion-list>
+
+  </section>
 
 </ion-content>
 
 <ion-footer>
-  <button large text-capitalize ion-button full color="secondary" no-margin>Search</button>
+  <button large text-capitalize ion-button full color="secondary" no-margin (click)="submit()">Search</button>
 </ion-footer>
 <section class="bottom-logo">
   <img src="assets/img/logo-long.png">
