--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Report</ion-title>
+    <ion-title text-center>Report</ion-title>
   </ion-navbar>
 
 </ion-header>
