--- a/src/pages/transaction-details/transaction-details.html
+++ b/src/pages/transaction-details/transaction-details.html
@@ -2,7 +2,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Transactions</ion-title>
+    <ion-title text-center>Transactions</ion-title>
   </ion-navbar>
 
 </ion-header>
