--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -108,13 +108,13 @@
             <ion-row>
               <ion-col col-6>
                 <ion-item no-margin no-padding>
-                  <ion-datetime displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="searchObj.from"></ion-datetime>
+                  <ion-datetime placeholder="Start day" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="searchObj.from"></ion-datetime>
                   <!--<ion-input formControlName="from" type="text" placeholder="Start day"></ion-input>-->
                 </ion-item>
               </ion-col>
               <ion-col col-6>
                 <ion-item no-margin no-padding>
-                  <ion-datetime displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="searchObj.to"></ion-datetime>
+                  <ion-datetime placeholder="End day" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="searchObj.to"></ion-datetime>
                   <!--<ion-input formControlName="to" type="text" placeholder="End day"></ion-input>-->
                 </ion-item>
               </ion-col>
