--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -44,6 +44,6 @@
   </form>
 </ion-content>
 
-<section class="bottom-logo">
+<section class="bottom-logo hideElementOnKeyboardShown">
   <img src="assets/img/logo-long.png">
 </section>
