--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -196,6 +196,6 @@
 <ion-footer>
   <button large text-capitalize ion-button full color="secondary" no-margin (click)="submit()">Search</button>
 </ion-footer>
-<section class="bottom-logo">
+<section class="hideElementOnKeyboardShown bottom-logo">
   <img src="assets/img/logo-long.png">
 </section>
