add template ticketDetails

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,5 +2,5 @@
   <ion-tab [root]="tabEarning" tabTitle="Earnings" tabIcon="custom-earning"></ion-tab>
   <ion-tab [root]="tabTransactions" tabTitle="Transactions" tabIcon="custom-transactions"></ion-tab>
   <ion-tab [root]="tabTicket" tabTitle="E-Ticket" tabIcon="custom-e-ticket"></ion-tab>
-  <ion-tab [root]="tabSettings" tabTitle="Settings" tabIcon="custom-settings"></ion-tab>
+  <ion-tab [root]="tabSettings" [tabsHideOnSubPages]="false" tabTitle="Settings" tabIcon="custom-settings"></ion-tab>
 </ion-tabs>
