--- a/src/pages/ticket/ticket-qr-scanner/ticket-qr-scanner.html
+++ b/src/pages/ticket/ticket-qr-scanner/ticket-qr-scanner.html
@@ -1,6 +1,6 @@
-<ion-content>
-
+<ion-content no-scroll class="qrscanner">
+  <div class="qrscanner-area"></div>
 </ion-content>
 <ion-footer>
-    <button class="cancel" (click)="cancel()" ion-button block color="primary" text-capitalize>Cancel</button>
+    <button class="cancel" (click)="cancel()" ion-button block color="clear" text-capitalize>Cancel</button>
 </ion-footer>
